--- a/Railways conf/dumpster.ipynb
+++ b/Railways conf/dumpster.ipynb
@@ -208,6 +208,78 @@
     "    start += seg_hop_samples"
    ],
    "id": "1fef791abb8428a9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "filename = r\"C:\\Users\\prife\\OneDrive - KTH\\KTH\\04 Research\\01 Conferences\\2026\\Railways\\02 Python\\Experiment_2.pkl\"\n",
+    "if os.path.exists(filename):\n",
+    "    print(\"Loading cached results...\")\n",
+    "    with open(filename, \"rb\") as f:\n",
+    "        data = pickle.load(f)\n",
+    "    confusion_dict_grad = data[\"confusion_dict\"]\n",
+    "    accuracy_dict_grad = data[\"accuracy_dict\"]\n",
+    "\n",
+    "else:\n",
+    "    print(\"Generating results...\")\n",
+    "\n",
+    "    confusion_dict_grad = {}\n",
+    "    accuracy_dict_grad = {}\n",
+    "    for matcher in (\"plain\", \"unique\", \"offset\"):\n",
+    "        confusion_dict_grad[matcher] = {}\n",
+    "        accuracy_dict_grad[matcher] = {}\n",
+    "        for sensor_name in sensor_names:\n",
+    "\n",
+    "            hash_to_entries, scenario_list = flatten_db_for_sensor(train_db.db, sensor_name)\n",
+    "            grouped_scenarios = [\"Baseline\", \"Aging rubber spring\", \"Degraded rubber spring\", \"Broken coil spring\", \"Worse track quality\"]\n",
+    "            scenario_to_idx = {sc: i for i, sc in enumerate(grouped_scenarios)}\n",
+    "            S = len(grouped_scenarios)\n",
+    "            confusion = np.zeros((S, S), dtype=int)\n",
+    "\n",
+    "            for true_scenario, sensor, seg_idx in test_segments:\n",
+    "                if sensor != sensor_name:\n",
+    "                    continue\n",
+    "                sample_fps = fingerprints_per_segment[(true_scenario, sensor, seg_idx)]\n",
+    "\n",
+    "                if matcher == \"plain\":\n",
+    "                    scores = match_plain_hash_count(sample_fps, hash_to_entries)\n",
+    "                elif matcher == \"unique\":\n",
+    "                    scores = match_unique_hashes(sample_fps, hash_to_entries)\n",
+    "                elif matcher == \"offset\":\n",
+    "                    scores, _ = match_offset_consistency(sample_fps, hash_to_entries)\n",
+    "                else:\n",
+    "                    raise ValueError(\"Unknown matcher\")\n",
+    "\n",
+    "                if not scores:\n",
+    "                    continue  # no match, treat as miss (optional: count separately)\n",
+    "\n",
+    "                # Predict scenario with max score\n",
+    "                predicted_scenario = max(scores.items(), key=lambda x: x[1])[0]\n",
+    "\n",
+    "                true_group = map_scenario_grad(true_scenario)\n",
+    "                pred_group = map_scenario_grad(predicted_scenario)\n",
+    "\n",
+    "                i = scenario_to_idx[true_group]\n",
+    "                j = scenario_to_idx[pred_group]\n",
+    "                confusion[i, j] += 1\n",
+    "\n",
+    "            total = confusion.sum()\n",
+    "            correct = np.trace(confusion)\n",
+    "            accuracy = correct / total if total > 0 else 0.0\n",
+    "\n",
+    "            confusion_dict_grad[matcher][sensor_name] = confusion\n",
+    "            accuracy_dict_grad[matcher][sensor_name] = accuracy\n",
+    "\n",
+    "            with open(filename, \"wb\") as f:\n",
+    "                pickle.dump({\n",
+    "                    \"confusion_dict\": confusion_dict_grad,\n",
+    "                    \"accuracy_dict\": accuracy_dict_grad\n",
+    "                }, f)"
+   ],
+   "id": "5533c875af26fab9"
   }
  ],
  "metadata": {
